implement rosterassigemnt suggestion process with optaplanner